--- a/package.json
+++ b/package.json
@@ -21,12 +21,12 @@
     "@vitejs/plugin-react": "^4.0.4",
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.30",
-    "react-router-dom": "^6.16.0",
     "tailwindcss": "^3.3.3",
     "vite": "^4.4.9"
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.16.0"
   }
 }
