--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "vite": "^4.4.9"
   },
   "dependencies": {
+    "gsap": "^3.12.2",
+    "pixi-filters": "^5.2.1",
+    "pixi.js": "^7.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.16.0"
